[package]
name = "github-copilot-demo"
version = "0.1.0"
authors = ["John Plummer <196550123+penrynjohnp@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Rust dependencies below
[dependencies]
dioxus = {version = "0.6.3", features = [] }
reqwest = {version="0.12.23", features = ["json"] }
serde = {version="1.0.219", features = ["derive"] }
serde_json = {version = "1.0.143",features = []}

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
